--- a/index.html
+++ b/index.html
@@ -1,178 +1,217 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Abhay 💖 Anjana – Valentine Proposal</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Abhay 💖 Anjana</title>
 
-  <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      background: linear-gradient(135deg, #ffe6f0, #fff1c1);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-family: "Poppins", sans-serif;
-    }
+<style>
+*{box-sizing:border-box}
+body{
+  margin:0;height:100vh;overflow:hidden;
+  display:flex;justify-content:center;align-items:center;
+  font-family:Poppins,system-ui,-apple-system;
+  background:linear-gradient(135deg,#ffe6f0,#fff1c1);
+  transition:background .6s;
+}
+body.dark{background:linear-gradient(135deg,#1e1e2f,#2b2b45)}
+.container{
+  width:92%;max-width:420px;background:#fff;border-radius:26px;
+  padding:28px;text-align:center;position:relative;z-index:2;
+  box-shadow:0 25px 45px rgba(0,0,0,.18);
+  transition:background .6s,color .6s;
+}
+body.dark .container{background:#2b2b45;color:#fff}
+img{width:160px;margin-bottom:14px;transition:opacity .4s}
+h1{margin:6px 0;color:#ff4d6d}
+body.dark h1{color:#ff9db0}
+p{color:#555;min-height:48px}
+body.dark p{color:#ddd}
 
-    .container {
-      background: #ffffff;
-      padding: 30px;
-      border-radius: 25px;
-      text-align: center;
-      width: 90%;
-      max-width: 420px;
-      box-shadow: 0 20px 40px rgba(0,0,0,0.15);
-      position: relative;
-      overflow: hidden;
-    }
+button{
+  padding:12px 28px;border:none;border-radius:30px;
+  font-size:17px;cursor:pointer;margin-top:10px;
+  transition:transform .2s;
+}
+button:hover{transform:scale(1.05)}
+.option{width:100%;background:#ffe6eb}
+#yes{background:#ff4d6d;color:#fff;animation:pulse 1.5s infinite}
+#no{background:#ddd;position:absolute}
+@keyframes pulse{
+  0%{box-shadow:0 0 0 0 rgba(255,77,109,.6)}
+  70%{box-shadow:0 0 0 15px rgba(255,77,109,0)}
+  100%{box-shadow:0 0 0 0 rgba(255,77,109,0)}
+}
+.hidden{display:none}
+.btns{margin-top:18px;position:relative;height:120px}
 
-    img {
-      width: 150px;
-      margin-bottom: 15px;
-    }
+.toggle{position:absolute;top:12px;right:16px;cursor:pointer}
+.name-glow{
+  font-size:22px;font-weight:700;letter-spacing:.5px;
+  background:linear-gradient(90deg,#ff4d6d,#ff9db0,#ff4d6d);
+  -webkit-background-clip:text;background-clip:text;color:transparent;
+  animation:glow 3s linear infinite;
+}
+@keyframes glow{to{background-position:200%}}
 
-    h1 {
-      color: #ff4d6d;
-    }
+.heart{
+  position:absolute;bottom:-20px;opacity:.6;animation:float 6s linear infinite
+}
+@keyframes float{to{transform:translateY(-120vh);opacity:0}}
 
-    p {
-      color: #555;
-      font-size: 16px;
-    }
+.badge{font-size:13px;opacity:.8}
+.countdown{font-weight:600;margin-top:6px}
 
-    button {
-      padding: 12px 28px;
-      border: none;
-      border-radius: 30px;
-      font-size: 18px;
-      cursor: pointer;
-      margin: 8px 0;
-    }
-
-    .option {
-      width: 100%;
-      background: #ffe6eb;
-    }
-
-    #yes {
-      background: #ff4d6d;
-      color: white;
-    }
-
-    #no {
-      background: #ddd;
-      position: absolute;
-    }
-
-    .btns {
-      margin-top: 20px;
-      position: relative;
-      height: 90px;
-    }
-
-    .hidden {
-      display: none;
-    }
-  </style>
+.share{
+  margin-top:14px;background:#25D366;color:#fff;width:100%
+}
+.easter{font-size:14px;opacity:.85}
+</style>
 </head>
 
 <body>
-  <div class="container">
 
-    <img id="gif" src="https://media.tenor.com/6xJ9s6ZC0uQAAAAC/mochi.gif">
+<div class="toggle" onclick="toggleDark()">🌙</div>
 
-    <h1 id="title">Hi Anjana 💕</h1>
-    <p id="text">Answer honestly… 😌</p>
+<audio id="music" loop>
+  <source src="https://cdn.pixabay.com/audio/2023/03/02/audio_1c94c7c0f1.mp3" type="audio/mpeg">
+</audio>
 
-    <!-- QUESTION AREA -->
-    <div id="quiz">
-      <button class="option" onclick="answerQ1(true)">
-        He pretends to be strong but is soft inside 🥹
-      </button>
-      <button class="option" onclick="answerQ1(false)">
-        He has no emotions 😐
-      </button>
-    </div>
+<script>
+for(let i=0;i<24;i++){
+  const h=document.createElement('div');
+  h.className='heart';h.textContent='💗';
+  h.style.left=Math.random()*100+'vw';
+  h.style.animationDuration=4+Math.random()*4+'s';
+  document.body.appendChild(h);
+}
+</script>
 
-    <!-- YES / NO QUESTIONS -->
-    <div id="yesNo" class="hidden">
-      <button id="yes" onclick="nextYes()">Yes</button>
-      <button onclick="wrong()">No</button>
-    </div>
+<div class="container">
+  <div class="name-glow" id="titleTap">Abhay × Anjana</div>
+  <div class="badge">Final Boss Valentine 💘</div>
 
-    <!-- PROPOSAL -->
-    <div id="proposal" class="hidden">
-      <p>Okay… the most important question 💖</p>
-      <h2>Will you be my Valentine?</h2>
+  <img id="gif" src="https://media.tenor.com/6xJ9s6ZC0uQAAAAC/mochi.gif" />
 
-      <div class="btns">
-        <button id="yes" onclick="yesClicked()">Yes 💕</button>
-        <button id="no">No 🙄</button>
-      </div>
-    </div>
+  <h1 id="title"></h1>
+  <p id="text"></p>
 
-    <!-- FINAL -->
-    <div id="final" class="hidden">
-      <img src="https://media.tenor.com/j1g5cZzQ8SAAAAAC/mochi-love.gif">
-      <h1>YAYYY 😭❤️</h1>
-      <p>You just made Abhay the happiest person ever 💘</p>
-    </div>
-
+  <div id="quiz">
+    <button class="option" onclick="answer(true)">He is soft at heart 🥹</button>
+    <button class="option" onclick="answer(false)">He has no emotions 😐</button>
   </div>
 
-  <script>
-    let step = 1;
-    const title = document.getElementById("title");
-    const text = document.getElementById("text");
+  <div id="yesNo" class="hidden">
+    <button id="yes" onclick="answer(true)">Yes</button><br/>
+    <button onclick="answer(false)">No</button>
+  </div>
 
-    function answerQ1(correct) {
-      if (!correct) {
-        alert("Wrong 😏 Try again!");
-        return;
-      }
-      step = 2;
-      title.innerText = "Question 2 💭";
-      text.innerText = "Does Abhay overthink everything?";
-      document.getElementById("quiz").classList.add("hidden");
-      document.getElementById("yesNo").classList.remove("hidden");
-    }
+  <div id="proposal" class="hidden">
+    <p>Okay… final question 💖</p>
+    <h2>Will you be my Valentine?</h2>
+    <div class="btns">
+      <button id="yes" onclick="yesClicked()">Yes 💕</button>
+      <button id="no">No 🙄</button>
+    </div>
+  </div>
 
-    function nextYes() {
-      if (step === 2) {
-        step = 3;
-        title.innerText = "Question 3 💖";
-        text.innerText = "Is he serious about you?";
-      } else {
-        document.getElementById("yesNo").classList.add("hidden");
-        document.getElementById("proposal").classList.remove("hidden");
-        document.getElementById("gif").src =
-          "https://media.tenor.com/Qw8n3YHq4iUAAAAC/mochi-please.gif";
-      }
-    }
+  <div id="final" class="hidden">
+    <img src="https://media.tenor.com/j1g5cZzQ8SAAAAAC/mochi-love.gif">
+    <h1>She said YES 😭❤️</h1>
+    <p>Best Valentine ever 💘</p>
+    <div class="countdown" id="countdown"></div>
+    <button class="share" onclick="share()">Share on WhatsApp 💬</button>
+    <div class="easter hidden" id="easter">🐣 Easter egg unlocked: Love +1 forever</div>
+  </div>
+</div>
 
-    function wrong() {
-      alert("Nope 😌 Try again!");
-    }
+<script>
+let step=0,taps=0;
+const title=document.getElementById('title');
+const text=document.getElementById('text');
+const quiz=document.getElementById('quiz');
+const yesNo=document.getElementById('yesNo');
+const proposal=document.getElementById('proposal');
+const gif=document.getElementById('gif');
+const music=document.getElementById('music');
 
-    /* FLOATING NO BUTTON (ONLY AT PROPOSAL) */
-    const noBtn = document.getElementById("no");
+const questions=[
+ {t:"Hi Anjana 💕",q:"Let’s play a tiny game first 😌",g:"https://media.tenor.com/6xJ9s6ZC0uQAAAAC/mochi.gif",type:"choice"},
+ {t:"Question 2 💖",q:"Does Abhay overthink a lot?",g:"https://media.tenor.com/3Z7Yj2d7B0QAAAAC/mochi-walk.gif",type:"yesno"},
+ {t:"Question 3 🥹",q:"Does he care deeply?",g:"https://media.tenor.com/0KJZVjU0qKQAAAAC/mochi-love.gif",type:"yesno"},
+ {t:"Question 4 😌",q:"Is he serious about you?",g:"https://media.tenor.com/5f7qK0H2z4IAAAAC/mochi-cat-walk.gif",type:"yesno"},
+ {t:"Question 5 💘",q:"Should he stop overthinking now?",g:"https://media.tenor.com/Qw8n3YHq4iUAAAAC/mochi-please.gif",type:"yesno"}
+];
 
-    function moveNo() {
-      const x = Math.random() * 260 - 130;
-      const y = Math.random() * 120 - 60;
-      noBtn.style.transform = `translate(${x}px, ${y}px)`;
-    }
+function type(el,txt){
+  el.innerHTML='';let i=0;
+  const t=setInterval(()=>{el.innerHTML+=txt[i++];if(i>=txt.length)clearInterval(t)},40);
+}
+function loadQ(){
+  const q=questions[step];
+  gif.style.opacity=0;
+  setTimeout(()=>{gif.src=q.g;gif.style.opacity=1},300);
+  type(title,q.t);type(text,q.q);
+  quiz.classList.toggle('hidden',q.type!=='choice');
+  yesNo.classList.toggle('hidden',q.type!=='yesno');
+}
+function answer(ok){
+  music.play();
+  if(!ok){alert("Wrong answer 😏 try again");return}
+  step++; step<questions.length?loadQ():(quiz.classList.add('hidden'),yesNo.classList.add('hidden'),proposal.classList.remove('hidden'));
+}
+loadQ();
 
-    noBtn.addEventListener("mouseover", moveNo);
-    noBtn.addEventListener("touchstart", moveNo);
+const noBtn=document.getElementById('no');
+function moveNo(){
+  noBtn.style.transform=`translate(${Math.random()*260-130}px,${Math.random()*140-70}px)`
+}
+noBtn.addEventListener('mouseover',moveNo);
+noBtn.addEventListener('touchstart',moveNo);
 
-    function yesClicked() {
-      document.getElementById("proposal").classList.add("hidden");
-      document.getElementById("final").classList.remove("hidden");
-      document.getElementById("gif").style.display = "none";
-    }
-  </script>
+function yesClicked(){
+  proposal.classList.add('hidden');
+  document.getElementById('final').classList.remove('hidden');
+  confetti(); startCountdown();
+}
+
+function confetti(){
+  for(let i=0;i<80;i++){
+    const c=document.createElement('div');
+    c.textContent='🎉';c.style.position='fixed';
+    c.style.left=Math.random()*100+'vw';c.style.top='-20px';
+    c.style.fontSize='20px';c.style.animation='fall 3s linear';
+    document.body.appendChild(c);setTimeout(()=>c.remove(),3000);
+  }
+}
+const s=document.createElement('style');
+s.textContent='@keyframes fall{to{transform:translateY(110vh) rotate(360deg)}}';
+document.head.appendChild(s);
+
+function toggleDark(){document.body.classList.toggle('dark')}
+
+function startCountdown(){
+  const el=document.getElementById('countdown');
+  const target=new Date(new Date().getFullYear(),1,14); // Feb 14
+  setInterval(()=>{
+    const d=target-new Date();
+    if(d<=0){el.textContent="Happy Valentine’s Day ❤️";return}
+    const days=Math.floor(d/864e5);
+    const hrs=Math.floor(d%864e5/36e5);
+    el.textContent=`Valentine’s Day in ${days}d ${hrs}h 💞`;
+  },1000);
+}
+
+function share(){
+  const msg=encodeURIComponent("She said YES! 💖 Check this out:");
+  const url=encodeURIComponent(location.href);
+  window.open(`https://wa.me/?text=${msg}%20${url}`,'_blank');
+}
+
+// Easter egg: tap name 5x
+document.getElementById('titleTap').onclick=()=>{
+  if(++taps===5) document.getElementById('easter').classList.remove('hidden');
+};
+</script>
 </body>
 </html>
